second recipe finish

--- a/recipes/beef_rendang.html
+++ b/recipes/beef_rendang.html
@@ -16,8 +16,35 @@
       perferendis nobis doloribus, recusandae numquam? Commodi tempore
       consequuntur quae? Ex.
     </p>
-    <h1>Bahan-bahan</h1>
+    <h1><strong>Bahan-bahan</strong></h1>
+    <ul>
+      <li>Daging tanpa lemak 2 kg, potong dadu</li>
+      <li>Santan 3 liter dari 4 butir kelapa</li>
+    </ul>
 
+    <h2>Bumbu Halus</h2>
+    <ul>
+      <li>Lengkuas 5 cm</li>
+      <li>Kunyit 4 cm, bakar</li>
+      <li>Jahe 3 cm, bakar</li>
+      <li>Cabe merah besar 150 gram</li>
+      <li>Cabe merah keriting 100 gram</li>
+      <li>Bawang putih 10 siung</li>
+      <li>Kemiri 7 butir</li>
+      <li>Garam halus 3 sdt</li>
+      <li>Pala 1 sdt</li>
+      <li>Jinten 1 sdt, sangrai</li>
+      <li>Ketumbar 1 sdm, sangrai</li>
+    </ul>
+    <h2>Bumbu Tidak Dihaluskan</h2>
+    <ul>
+      <li>Bawang merah 20 butir, iris tipis</li>
+      <li>Asam kandis 3 cm</li>
+      <li>Daun serai 4 batang, memarkan</li>
+      <li>Daun salam 2 lembar</li>
+      <li>Daun kunyit 3 lembar, simpulkan</li>
+      <li>Daun jeruk purut 4 lembar</li>
+    </ul>
     <!-- Cooking instruction step by step-->
     <h1>Cara Memasak</h1>
     <ol>
@@ -35,3 +62,5 @@
     </ol>
   </body>
 </html>
+
+Bumbu tidak dihaluskan:
