--- a/recipes/nasi_goreng.html
+++ b/recipes/nasi_goreng.html
@@ -16,9 +16,49 @@
       perferendis nobis doloribus, recusandae numquam? Commodi tempore
       consequuntur quae? Ex.
     </p>
-    <h1>Bahan-bahan</h1>
+    <h1><strong>Bahan-bahan</strong></h1>
+    <ul>
+      <li>Daging tanpa lemak 2 kg, potong dadu</li>
+      <li>Santan 3 liter dari 4 butir kelapa</li>
+    </ul>
 
+    <h2>Bumbu Halus</h2>
+    <ul>
+      <li>Lengkuas 5 cm</li>
+      <li>Kunyit 4 cm, bakar</li>
+      <li>Jahe 3 cm, bakar</li>
+      <li>Cabe merah besar 150 gram</li>
+      <li>Cabe merah keriting 100 gram</li>
+      <li>Bawang putih 10 siung</li>
+      <li>Kemiri 7 butir</li>
+      <li>Garam halus 3 sdt</li>
+      <li>Pala 1 sdt</li>
+      <li>Jinten 1 sdt, sangrai</li>
+      <li>Ketumbar 1 sdm, sangrai</li>
+    </ul>
+    <h2>Bumbu Tidak Dihaluskan</h2>
+    <ul>
+      <li>Bawang merah 20 butir, iris tipis</li>
+      <li>Asam kandis 3 cm</li>
+      <li>Daun serai 4 batang, memarkan</li>
+      <li>Daun salam 2 lembar</li>
+      <li>Daun kunyit 3 lembar, simpulkan</li>
+      <li>Daun jeruk purut 4 lembar</li>
+    </ul>
     <!-- Cooking instruction step by step-->
     <h1>Cara Memasak</h1>
+    <ol>
+      <li>
+        Tuang santan ke dalam wajan, masukkan daun kunyit, daun jeruk, daun
+        salam, serai, asam, irisan bawang merah, dan bumbu yang telah
+        dihaluskan.
+      </li>
+      <li>Masak santan yang telah dibumbui sambil sesekali diaduk.</li>
+      <li>
+        Masukkan potongan daging, aduk rata. Masak dengan api sedang hingga
+        santan mengering dan berminyak. Angkat.
+      </li>
+      <li>Hidangkan rendang dengan sepiring nasi hangat.</li>
+    </ol>
   </body>
 </html>
