third recipe finish

--- a/recipes/nasi_goreng.html
+++ b/recipes/nasi_goreng.html
@@ -17,48 +17,49 @@
       consequuntur quae? Ex.
     </p>
     <h1><strong>Bahan-bahan</strong></h1>
+    <h2>Bahan Utama</h2>
     <ul>
-      <li>Daging tanpa lemak 2 kg, potong dadu</li>
-      <li>Santan 3 liter dari 4 butir kelapa</li>
+      <li>1 potong paha ayam atas bawah rebus, suwir ayamnya</li>
+      <li>2 butir telur, kocok lepas</li>
+      <li>150 gram udang tanpa kulit</li>
+      <li>5 buah bakso sapi, potong-potong</li>
+      <li>5 buah bakso ikan, potong-potong</li>
+      <li>500 gram nasi putih</li>
+      <li>2 sendok makan KECAP MANIS BANGO</li>
+      <li>1 sendok teh garam</li>
+      <li>1/2 sendok teh gula pasir</li>
+      <li>1 batang daun bawang, diiris tipis</li>
+      <li>1 1/2 sendok makan bawang goreng untuk taburan</li>
+      <li>3 sendok makan minyak untuk menumis</li>
     </ul>
-
-    <h2>Bumbu Halus</h2>
+    <h2>Bumbu Tumbuk Kasar</h2>
     <ul>
-      <li>Lengkuas 5 cm</li>
-      <li>Kunyit 4 cm, bakar</li>
-      <li>Jahe 3 cm, bakar</li>
-      <li>Cabe merah besar 150 gram</li>
-      <li>Cabe merah keriting 100 gram</li>
-      <li>Bawang putih 10 siung</li>
-      <li>Kemiri 7 butir</li>
-      <li>Garam halus 3 sdt</li>
-      <li>Pala 1 sdt</li>
-      <li>Jinten 1 sdt, sangrai</li>
-      <li>Ketumbar 1 sdm, sangrai</li>
+      <li>1 sendok teh terasi, bakar</li>
+      <li>3 buah cabai merah besar</li>
+      <li>3 buah cabai merah keriting</li>
+      <li>2 siung bawang putih</li>
+      <li>6 butir bawang merah</li>
     </ul>
-    <h2>Bumbu Tidak Dihaluskan</h2>
+    <h2>Bahan Pelengkap</h2>
     <ul>
-      <li>Bawang merah 20 butir, iris tipis</li>
-      <li>Asam kandis 3 cm</li>
-      <li>Daun serai 4 batang, memarkan</li>
-      <li>Daun salam 2 lembar</li>
-      <li>Daun kunyit 3 lembar, simpulkan</li>
-      <li>Daun jeruk purut 4 lembar</li>
+      <li>3 buah telur ceplok</li>
     </ul>
     <!-- Cooking instruction step by step-->
     <h1>Cara Memasak</h1>
     <ol>
       <li>
-        Tuang santan ke dalam wajan, masukkan daun kunyit, daun jeruk, daun
-        salam, serai, asam, irisan bawang merah, dan bumbu yang telah
-        dihaluskan.
+        Panaskan minyak. Tumis bumbu tumbuk kasar sampai harum. Sisihkan di
+        pinggir wajan. Masukkan telur. Aduk sampai berbutir.
       </li>
-      <li>Masak santan yang telah dibumbui sambil sesekali diaduk.</li>
       <li>
-        Masukkan potongan daging, aduk rata. Masak dengan api sedang hingga
-        santan mengering dan berminyak. Angkat.
+        Tambahkan ayam, udang, bakso. Aduk rata. Tambahkan nasi putih. Aduk-
+        aduk. Masukkan <em>KECAP MANIS BANGO</em>, garam, dan gula pasir. Aduk
+        sampai matang.
       </li>
-      <li>Hidangkan rendang dengan sepiring nasi hangat.</li>
+      <li>
+        Masukkan daun bawang. Aduk rata. Sajikan bersama telur ceplok dan
+        taburan bawang merah goreng.
+      </li>
     </ol>
   </body>
 </html>
