--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       alt="Indonesian Food Vectors by Vecteezy"
       height="350"
     />
-    <h2><a href="/recipes/gado_gado.html">Gado-Gado</a></h2>
-    <h2><a href="/recipes/nasi_goreng.html">Nasi Goreng</a></h2>
-    <h2><a href="/recipes/beef_rendang.html">Beef Rendang</a></h2>
+    <h2><a href="./recipes/gado_gado.html">Gado-Gado</a></h2>
+    <h2><a href="./recipes/nasi_goreng.html">Nasi Goreng</a></h2>
+    <h2><a href="./recipes/beef_rendang.html">Beef Rendang</a></h2>
   </body>
 </html>
