--- a/recipes/beef_rendang.html
+++ b/recipes/beef_rendang.html
@@ -11,10 +11,9 @@
     <img src="/images/rendang.jpg" alt="Rendang Daging" height="500" />
     <h1>Description</h1>
     <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim error autem
-      ab esse totam similique praesentium maxime voluptatem. Ratione iusto
-      perferendis nobis doloribus, recusandae numquam? Commodi tempore
-      consequuntur quae? Ex.
+      Rendang is a traditional food originating from West Sumatra and prepared
+      by Minangkabau people. Rendang is commonly made with beef (especially
+      tenderloin) with special sauce containing a high amount of coconut milk.
     </p>
     <h1><strong>Bahan-bahan</strong></h1>
     <ul>
