--- a/recipes/nasi_goreng.html
+++ b/recipes/nasi_goreng.html
@@ -11,10 +11,8 @@
     <img src="/images/nasi_goreng.jpg" alt="Nasi Goreng Biasa" height="500" />
     <h1>Description</h1>
     <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim error autem
-      ab esse totam similique praesentium maxime voluptatem. Ratione iusto
-      perferendis nobis doloribus, recusandae numquam? Commodi tempore
-      consequuntur quae? Ex.
+      Nasi goreng is a Southeast Asian fried rice dish, usually cooked with
+      pieces of meat and vegetables.
     </p>
     <h1><strong>Bahan-bahan</strong></h1>
     <h2>Bahan Utama</h2>
