--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
       alt="Indonesian Food Vectors by Vecteezy"
       height="350"
     />
-    <h2><a href="./recipes/gado_gado.html">Gado-Gado</a></h2>
-    <h2><a href="./recipes/nasi_goreng.html">Nasi Goreng</a></h2>
-    <h2><a href="./recipes/beef_rendang.html">Beef Rendang</a></h2>
+    <ul>
+      <li><a href="./recipes/gado_gado.html">Gado-Gado</a></li>
+      <li><a href="./recipes/nasi_goreng.html">Nasi Goreng</a></li>
+      <li><a href="./recipes/beef_rendang.html">Beef Rendang</a></li>
+    </ul>
   </body>
 </html>
