--- a/recipes/gado_gado.html
+++ b/recipes/gado_gado.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h2>Gado-Gado</h2>
-    <img src="/images/gado.jpg" alt="Gado-gado Jakarta" height="500" />
+    <img src="../images/gado.jpg" alt="Gado-gado Jakarta" height="500" />
     <h1>Description</h1>
     <p>
       Resep gado-gado sudah dikenal sejak lama sebagai salad-nya orang
