--- a/recipes/nasi_goreng.html
+++ b/recipes/nasi_goreng.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <img src="/images/nasi_goreng.jpg" alt="Nasi Goreng Biasa" height="500" />
+    <img src="../images/nasi_goreng.jpg" alt="Nasi Goreng Biasa" height="500" />
     <h1>Description</h1>
     <p>
       Nasi goreng is a Southeast Asian fried rice dish, usually cooked with
