--- a/recipes/beef_rendang.html
+++ b/recipes/beef_rendang.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <img src="/images/rendang.jpg" alt="Rendang Daging" height="500" />
+    <img src="../images/rendang.jpg" alt="Rendang Daging" height="500" />
     <h1>Description</h1>
     <p>
       Rendang is a traditional food originating from West Sumatra and prepared
