fixing missing desc

--- a/recipes/nasi_goreng.html
+++ b/recipes/nasi_goreng.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <h2>Nasi Goreng - Fried Rice</h2>
     <img src="../images/nasi_goreng.jpg" alt="Nasi Goreng Biasa" height="500" />
     <h1>Description</h1>
     <p>
