--- a/recipes/beef_rendang.html
+++ b/recipes/beef_rendang.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <h2>Beef Rendang</h2>
     <img src="../images/rendang.jpg" alt="Rendang Daging" height="500" />
     <h1>Description</h1>
     <p>
