adding css href

--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Indonesian Food Recipes</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <h1>Indonesian Food Recipes</h1>
+    <h1 class="Title">Indonesian Food Recipes</h1>
     <img
       src="./images/IndonesianFood.jpg"
       alt="Indonesian Food Vectors by Vecteezy"
       height="350"
     />
     <ul>
-      <li><a href="./recipes/gado_gado.html">Gado-Gado</a></li>
+      <li class="subtitle"><a href="./recipes/gado_gado.html">Gado-Gado</a></li>
       <li><a href="./recipes/nasi_goreng.html">Nasi Goreng</a></li>
       <li><a href="./recipes/beef_rendang.html">Beef Rendang</a></li>
     </ul>
