basic box color

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
   </head>
 
   <body>
-    <h1 class="Title">Indonesian Food Recipes</h1>
+    <div class="boxA">Indonesian Food Recipes</div>
     <img
+      class="image header"
       src="./images/IndonesianFood.jpg"
       alt="Indonesian Food Vectors by Vecteezy"
       height="350"
     />
-    <ul>
-      <li class="subtitle"><a href="./recipes/gado_gado.html">Gado-Gado</a></li>
+    <ul class="boxB">
+      <li><a href="./recipes/gado_gado.html">Gado-Gado</a></li>
       <li><a href="./recipes/nasi_goreng.html">Nasi Goreng</a></li>
       <li><a href="./recipes/beef_rendang.html">Beef Rendang</a></li>
     </ul>
