adding margins to title and image

--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
   </head>
 
   <body>
-    <div class="boxA">Indonesian Food Recipes</div>
-    <img
-      class="image header"
-      src="./images/IndonesianFood.jpg"
-      alt="Indonesian Food Vectors by Vecteezy"
-      height="350"
-    />
-    <ul class="boxB">
-      <li><a href="./recipes/gado_gado.html">Gado-Gado</a></li>
-      <li><a href="./recipes/nasi_goreng.html">Nasi Goreng</a></li>
-      <li><a href="./recipes/beef_rendang.html">Beef Rendang</a></li>
-    </ul>
+    <div class="card">
+      <h1 class="title">Indonesian Food Recipes</h1>
+      <img
+        class="image-header"
+        src="./images/IndonesianFood.jpg"
+        alt="Indonesian Food Vectors by Vecteezy"
+        height="350"
+      />
+      <ul class="menu-list">
+        <li><a href="./recipes/gado_gado.html">Gado-Gado</a></li>
+        <li><a href="./recipes/nasi_goreng.html">Nasi Goreng</a></li>
+        <li><a href="./recipes/beef_rendang.html">Beef Rendang</a></li>
+      </ul>
+    </div>
   </body>
 </html>
